# templates

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.xlings  xmake.lua
src/: templates.cppm
tests/: main.cpp
